# bobtemplates.pypbr

./: .gitignore  MANIFEST.in  README.md  setup.cfg  tox.ini
bobtemplates/pypbr/namespace_package/python-+python.module.name+-+python.module.namespace.name+/: setup.cfg.bob
bobtemplates/python_pbr/: hooks.py
bobtemplates/python_pbr/namespace_package/: .mrbob.ini
bobtemplates/python_pbr/package/: .mrbob.ini
bobtemplates/python_pbr/tests/: test_hooks.py
