[metadata]
name = python-sys11-bobtemplates
summary = bobtemplates with sys11 specific settings
description-file = README.md
author = 'Christoph Glaubitz'
author-email = 'c.glaubitz@syseleven.de'
home-page = 'https://syseleven.de'
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages = bobtemplates
namespace_packages = bobtemplates

[pbr]
warnerrors = True
